high contrast mode fixes for quote icon and featured case study results icon

--- a/tbx/static_src/sass/components/_pullquote.scss
+++ b/tbx/static_src/sass/components/_pullquote.scss
@@ -57,3 +57,13 @@
         }
     }
 }
+
+.quote-icon {
+    &__white {
+        fill: var(--color--heading);
+
+        @include high-contrast-light-mode() {
+            fill: var(--color--background);
+        }
+    }
+}
